# AF_Lib

./: AF_Lib.code-workspace  CMakeLists.txt  README.md
include/: AF_CTransform3D.h  AF_Camera.h  AF_Input.h  AF_Lib_Define.h  AF_Log.h  AF_Material.h  AF_Mesh.h  AF_MeshData.h  AF_Random.h  AF_Rect.h  AF_Renderer.h  AF_Shader.h  AF_Sprite.h  AF_Time.h  AF_Util.h  AF_Vertex.h  AF_Window.h
include/ECS/Components/: AF_CCamera.h  AF_CCollider.h  AF_CRigidbody.h  AF_CSprite.h  AF_CTransform3D.h  CCollision2D.h  CCollision3D.h  CInput.h  CLight.h  CModel.h  Collider2D.h  Collider3D.h
include/ECS/Entities/: AF_ECS.h  AF_Entity.h
src/: MyObjectiveCClass.h  MyObjectiveCClass.m  main.c
src/OpenGL/: AF_OpenGL_Renderer.c  AF_OpenGL_Shader.c
src/common/: AF_Input_glfw.c  AF_Log.c  AF_OpenGL_Renderer.c  AF_Window_glfw.c  Entity.cpp  EntityManager.cpp
src/osx/: AF_Window_Cocoa.c  AF_Window_Cocoa.h  AF_Window_Cocoa.m  AF_Window_osx.c
